--- a/style.css
+++ b/style.css
@@ -154,9 +154,10 @@ body {
     font-size: 30px;
     letter-spacing: 8px;
     text-transform: uppercase;
-    font-weight: ;300
+    font-weight: ;300px;
     text-shadow: 0 0 20px rgba(255, 255, 255, 0.4);
 }
+
 
 
 
